<resources>
    <!--activity_login.xml的文字-->
    <string name="app_name">YH_android</string>
    <string name="username">用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="input_username">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="forget_password">忘记密码？</string>
    <string name="reset">重置</string>
    <string name="no_password">尚无密码？</string>
    <string name="register">注册</string>
    <string name="home">财贵人</string>
    <string name="article">贵人说</string>
    <string name="community">富豪答</string>
    <string name="chat">孕富圈</string>
    <string name="person">个人</string>
</resources>
