<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.yh_android.yh_android.view_model.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/YHColor_DarkRed"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        binding:layout_constraintBottom_toBottomOf="parent"
        binding:layout_constraintHorizontal_bias="0.5"
        binding:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            binding:layout_constraintBottom_toBottomOf="parent"
            binding:layout_constraintEnd_toEndOf="parent"
            binding:layout_constraintHorizontal_bias="0.5"
            binding:layout_constraintStart_toStartOf="parent"
            binding:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_user_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp" >

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_user_name"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/username"
                    android:textColor="@color/YHColor_PureGray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_username"
                    android:inputType="phone"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@={viewModel.userName}"
                    android:textColor="@color/YHColor_Black"
                    android:textColorHint="@color/YHColor_DarkGray"
                    android:textSize="18sp"
                    binding:textChanged="@{viewModel.onUsernameEmptyCommand}" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/clean_edit"
                    android:visibility="@{viewModel.clearUsernameBtnVisibility}"
                    binding:onClickCommand="@{viewModel.clearUserNameOnClickCommand}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_user_edit"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp"
                binding:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_user_name"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/password"
                    android:textColor="@color/YHColor_PureGray"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/YHColor_Black"
                    android:textColorHint="@color/YHColor_DarkGray"
                    android:textSize="18sp"
                    binding:textChanged="@{viewModel.onPasswordEmptyCommand}" />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/clean_edit"
                    android:visibility="@{viewModel.clearPasswordBtnVisibility}"
                    binding:onClickCommand="@{viewModel.clearPasswordOnClickCommand}" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="175dp"
            android:layout_height="40dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/btn_login"
            android:letterSpacing="1.6"
            android:text="@string/login"
            android:textColor="@color/YHColor_WhiteGray"
            android:textSize="18sp"
            binding:layout_constraintEnd_toEndOf="parent"
            binding:layout_constraintStart_toStartOf="parent"
            binding:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            binding:onClickCommand="@{viewModel.loginOnClickCommand}" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            binding:layout_constraintEnd_toEndOf="parent"
            binding:layout_constraintHorizontal_bias="0.5"
            binding:layout_constraintStart_toStartOf="parent"
            binding:layout_constraintTop_toBottomOf="@+id/btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/et_user_name"
                android:letterSpacing="0.6"
                android:paddingBottom="1dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="1dp"
                android:text="@string/reset"
                android:textColor="@color/YHColor_DarkRed"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/white"
                android:paddingBottom="4dp"
                android:paddingTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_password"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/et_user_name"
                android:letterSpacing="0.6"
                android:paddingBottom="1dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="1dp"
                android:text="@string/register"
                android:textColor="@color/YHColor_DarkRed"
                android:textSize="14sp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>